[gd_scene load_steps=3 format=2]

[ext_resource path="res://Demo_Level.gd" type="Script" id=1]

[sub_resource type="Environment" id=1]
background_energy = 0.0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_sky_contribution = 0.0
dof_blur_far_distance = 3.0
dof_blur_far_quality = 2

[node name="Demo_Level" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.00444 )
current = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Position3D" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )

[node name="Position3D2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -20 )

[node name="Position3D3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -20 )

[node name="Position3D4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -20 )

[node name="Position3D5" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, -20 )

[node name="Position3D6" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, -20 )

[node name="Position3D7" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, -20 )

[node name="Position3D8" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, -20 )

[node name="Position3D9" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, -20 )
